# bar-chart-race

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  start.bat  tmp1qy5n61x.csv  tmp1rotgym2.csv  tmp5t2cgwie.csv  tmp7hh6h0pe.csv  tmp7jzj773i.csv  tmp7v4m6qm4.csv  tmp8ktrizrl.csv  tmp9826hcd0.csv  tmp_lsbfsv3.csv  tmpb69bx3oo.csv  tmpbltwmkte.csv  tmpbsxq8754.csv  tmpcrjhmfbu.csv  tmpdafmitjf.csv  tmpeowpa44l.csv  tmpev6dxkrs.csv  tmpev_qimi6.xlsx  tmpf0jrtx3w.csv  tmpfleo753u.csv  tmpfta4xh25.csv  tmpi5y15sqp.csv  tmpibkmqo8n.csv  tmpihv7gkgs.csv  tmpiptxq7wo.csv  tmpiyh015yn.csv  tmpjg2q56br.csv  tmpjsyx07pu.csv  tmpkc0xlgl0.csv  tmpktwub6gp.csv  tmplp_67qqk.csv  tmply8s8xez.csv  tmpm2djycu2.csv  tmpnev2d91x.csv  (+27 more)
.claude/: settings.local.json
docs/: index.html
hf_space/: Dockerfile  app.py  requirements.txt
hf_space/bar_race/: __main__.py  animate.py  cli.py  config.py  encode.py  ingest.py  normalize.py  pipeline.py  player_teams.py  render.py  team_lookup.py  themes.py
sample_data/: four_player_test.csv  generate_samples.py  jordan_vs_lebron.csv  lebron_vs_curry.csv  nba_points_2024_long.xlsx  nba_points_2024_wide.xlsx  nba_team_wins.csv
scripts/: bulk_download_headshots.py  fetch_headshots.py  fetch_team_logos.py  rebuild_headshots.py
src/bar_race/: __init__.py  animate.py  cli.py  config.py  ingest.py  normalize.py  pipeline.py  render.py  sound.py  team_lookup.py  themes.py
src/comparison/: __init__.py  __main__.py  cli.py  config.py  encode.py  (+3 more)
tests/: test_core.py
tools/: customizer.html  server.py
