[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bar-chart-race"
version = "0.1.0"
description = "Animated bar chart race MP4 video generator for NBA stats data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
bar-chart-race = "bar_race.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
